--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "v18.15.0",
+    "npm": "9.5.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
