--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
+    "flyctl": "^1.0.3",
     "navbar": "^2.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-sticky-nav": "^4.0.6"
   },
   "stack": "heroku-22",
